# drtaint

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
app/drtaint_only/: CMakeLists.txt  README.md  drtaint_only_client.cpp
app/drtaint_test/: CMakeLists.txt  drtaint_test_client.cpp
core/: defines.h  drtaint.cpp  drtaint.h  drtaint_helper.cpp  drtaint_helper.h  propagation.cpp  propagation.h  shadow_blocks.cpp  shadow_blocks.h  shadow_memory.c  shadow_memory.h  shadow_registers.c  shadow_registers.h
core/api/: drtaint.h
scripts/win/: build.ps1  common.ps1  compile_commands.ps1  configure.ps1  run.ps1
